# CIMPLE_compiler

./: .gitignore  CMakeLists.txt  README.md  SPECIFICATION.md  SYNTAX.md  cimple.cpp  run_tests.py  test.cimp  test.cpp
cmake/: FindLLVM.cmake  ToolchainLinux.cmake  ToolchainWindows.cmake
config/: compiler_config.h  target_config.h
docs/: PEG_GRAMMAR_PLAN.md
include/backend/ir/: ir.h
include/backend/llvm/: llvm_codegen.h  llvm_context.h  llvm_module_builder.h  llvm_pass_manager.h  llvm_type_mapper.h
include/driver/: build_pipeline.h  linker_driver.h
include/frontend/: token_stream.h
include/frontend/eval/: evaluator.h
include/frontend/lexer/: lexer.h  token.h  token_utils.h
include/frontend/parser/: parser.h
include/frontend/semantic/: cimple_var.h  scope_stack.h  type_checker.h  type_infer.h
runtime_lib/: CMakeLists.txt
src/: main.cpp
src/backend/ir/: ir_builder.cpp
src/backend/llvm/: llvm_codegen.cpp  llvm_context.cpp  llvm_module_builder.cpp  llvm_pass_manager.cpp  llvm_type_mapper.cpp
src/diagnostics/: error_reporter.cpp  source_location.cpp  warning_manager.cpp
src/driver/: build_pipeline.cpp  command_parser.cpp  compiler_driver.cpp  linker_driver.cpp
src/frontend/ast/: ast_expressions.cpp  ast_node.cpp  ast_statements.cpp  ast_visitor.cpp
src/frontend/eval/: evaluator.cpp
src/frontend/lexer/: lexer.cpp  token.cpp  token_stream.cpp
src/frontend/parser/: expression_parser.cpp  parser.cpp  python_indent_handler.cpp  statement_parser.cpp
src/frontend/semantic/: cimple_var.cpp  type_checker.cpp  type_infer.cpp
src/gpu/: gpu_analyzer.cpp  gpu_kernel_transform.cpp  gpu_launcher_codegen.cpp  nvptx_backend.cpp  spirv_backend.cpp
src/interop/: c_abi_bridge.cpp  dll_loader.cpp  extern_function_resolver.cpp
src/middleend/ir/: ir_builder.cpp  ir_function.cpp  ir_instruction.cpp  ir_module.cpp
src/middleend/optimizer/: constant_folding.cpp  dead_code_elimination.cpp  inline_pass.cpp  loop_unrolling.cpp
src/runtime/: builtin_print.cpp  heap_allocator.cpp  memory_manager.cpp  runtime_startup.cpp  stack_allocator.cpp
src/semantic/: function_resolver.cpp  module_resolver.cpp  scope_manager.cpp  symbol_table.cpp  type_checker.cpp  type_inference.cpp  type_system.cpp
src/utils/: file_loader.cpp  hash_utils.cpp  logger.cpp  string_utils.cpp
stdlib/: core.cimp  math.cimp  memory.cimp
tests/: 01_arithmetic.cimp  02_function_call.cimp  03_strings.cimp  04_nested_calls.cimp  05_multi_assign.cimp  06_if_else.cimp  07_while.cimp  08_comparisons.cimp  09_logical_basic.cimp  10_logical_precedence.cimp  11_short_circuit_and.cimp  12_short_circuit_or.cimp  13_break_continue.cimp  14_scope_block_shadow.cimp  15_scope_function_local.cimp  16_scope_global_read.cimp  17_phase3_smoke_print_add.cimp  README.md
tests/parser_tests/: sample.cimp
tools/cimple_cli/: CMakeLists.txt  cimplec.cpp  cli_commands.cpp  lex_parse_driver.cpp  main.cpp
tools/cimple_lsp/: lsp_server.cpp
